responsive ( home , footer , login , contact us , sign up ,  track order ) change design of home page validation (signp , track order , contact us )

--- a/src/app/pages/contract/contract.component.html
+++ b/src/app/pages/contract/contract.component.html
@@ -1,7 +1,7 @@
 <section class="contract">
     <div class="container login-section my-5 ">
         <div class="row py-5 login-layer ">
-            <div class="col-md-7 ml-auto">
+            <div class="col-lg-7 col-md-9 ml-auto">
                 <div class="  py-3">
                     <div class=" ">
                         <!-------------------contract title------------------------->
@@ -20,7 +20,8 @@
                                     <div class="border-bottom  rounded px-4 py-2 d-flex">
 
                                         <span class="   mx-3 mt-1 ">Starting </span>
-                                        <input type="date" class="form-control border-0" id="exampleInputPassword1" [(ngModel)]="contract.contract_start_date">
+                                         <input type="date" class="form-control border-0" id="exampleInputPassword1">
+                                        <!-- <input type="date" class="form-control border-0" id="exampleInputPassword1" [(ngModel)]="contract.contract_start_date"> -->
                                     </div>
                                 </div>
                                  <!-----------------------end Starting date --------------------->
