--- a/src/app/shell/footer/footer.component.html
+++ b/src/app/shell/footer/footer.component.html
@@ -9,7 +9,7 @@
             <div class="row">
 
      <!------------------- SHOPPING GUIDE ------------------>
-                <div class="col-md-3 mt-2">
+                <div class="col-lg-3 col-md-6 mt-2">
                     <div class=" shadow rounded py-3 px-2 shop-section">
                         <h5 class="fontsize mb-2 text-mainColor text-center ">SHOPPING GUIDE</h5>
                         <hr class="">
@@ -36,7 +36,7 @@
 
 
        <!------------------------ LINKS ----------------------------->
-                <div class="col-md-3 mt-2">
+                <div class="col-lg-3 col-md-6 mt-2">
                     <div  class=" shadow rounded py-3 px-2 shop-section">
                         <h5 class="fontsize mb-2 text-mainColor text-center">USEFUL LINKS</h5>
                         <hr class="">
@@ -62,7 +62,7 @@
 
 
  <!------------------------ NewsLetter ----------------------------->
-                <div class="col-md-6 ">
+                <div class="col-lg-6 col-md-12">
                     <div class="p-4">
                         <h3 class="fontsize mb-2 text-white">SIGN UP FOR NEWSLETTER</h3>
                         <div class="row">
