--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,7 +5,7 @@
             <img src="../../../assets/images/bglogin.jpg" class="w-100 h-100" alt="">
         </div> -->
 
-        <div class="col-md-7 ml-auto">
+        <div class="col-lg-7 col-md-9 ml-auto">
 
             <div class="  py-3">
                 <div class=" ">
