--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -6,7 +6,7 @@
 
        
     
-        <div class="col-md-6 ml-auto">
+        <div class="col-lg-6 col-md-8 ml-auto">
           
                 <div class=" text-white text-center login mb-5 ">
                     <h2 class=" text-white ">Sign Up</h2>
@@ -39,19 +39,26 @@
                        
                       <div class="form-group">
                         <!-- <label for="exampleInputEmail1">Email address</label> -->
-                        <div class="border-bottom rounded mb-4  d-flex" >
+                        <div class="border-bottom rounded   d-flex" >
                             <span><i class="far fa-user text-white  mx-5 mt-1"></i></span>
                             
                   
-                            <input type="text" placeholder="Enter last name" class="form-control  border-0" id="exampleInputPassword1">
+                            <input type="text" placeholder="Enter last name" class="form-control  border-0" id="exampleInputPassword1"
+                            [class.is-valid]="signUpForm.get('last_name').errors == null && signUpForm.get('last_name').touched "
+                            formControlName='last_name'>
                         </div>
+                        <div class="alert alert-danger" role="alert"
+                                *ngIf="signUpForm.get('last_name').errors != null && signUpForm.get('last_name').touched">
+                                Enter Valid Last Name
+                            </div>
+                        
                     </div>    
                     
                     <div class="form-group">
                         <div class="border-bottom rounded mb-4  d-flex" >
                             <span><i class="fas fa-map-marker-alt text-white  mx-5 mt-1 "></i></span> 
                             
-                        <select class="form-control border-0 text-gray">
+                        <select class="form-control border-0 text-gray" required>
                             <option>Select city:</option>
                             <option >Jeddah</option>
                             <option >El-Riad</option>
@@ -64,39 +71,61 @@
                 
                   <div class="form-group">
                       <!-- <label for="exampleInputEmail1">Email address</label> -->
-                      <div class="border-bottom rounded mb-4 d-flex" >
+                      <div class="border-bottom rounded  d-flex" >
                         <span><i class="fas fa-mobile-alt text-white mx-5 mt-1 "></i></span>        
-                          <input type="" placeholder="(+966) saudi Arabia" class="form-control border-0" id="exampleInputPassword1">
+                          <input type="" placeholder="(+966) saudi Arabia" class="form-control border-0" id="exampleInputPassword1"
+                          [class.is-valid]="signUpForm.get('phone').errors == null && signUpForm.get('phone').touched "
+                          formControlName='phone'>
                       </div>
+                      <div class="alert alert-danger" role="alert"
+                                *ngIf="signUpForm.get('phone').errors != null && signUpForm.get('phone').touched">
+                                Enter Valid Phone
+                            </div>
                   </div>
                       
                       <div class="form-group">
                           <!-- <label for="exampleInputEmail1">Email address</label> -->
-                          <div class="border-bottom rounded mb-4 d-flex" >
+                          <div class="border-bottom rounded d-flex" >
                                <span><i class="far fa-envelope text-white  mx-5 mt-1 "></i></span>  
                                                       
-                              <input type="email" placeholder="Enter your mail" class="form-control border-0" id="exampleInputPassword1">
+                              <input type="email" placeholder="Enter your mail" class="form-control border-0" id="exampleInputPassword1"
+                              [class.is-valid]="signUpForm.get('email').errors == null && signUpForm.get('email').touched "
+                              formControlName='email' >
                           </div>
+                          <div class="alert alert-danger" role="alert"
+                                *ngIf="signUpForm.get('email').errors != null && signUpForm.get('email').touched">
+                                Enter Valid Email
+                            </div>
                       </div>
                 
   
                
                       <div class="form-group">
                           <!-- <label for="exampleInputEmail1">Email address</label> -->
-                          <div class="border-bottom rounded mb-4 d-flex" >
+                          <div class="border-bottom rounded d-flex" >
                                <span> <i class="far fa-eye-slash text-white  mx-5 mt-1 "></i>
                               </span> 
-                              <input type="password" placeholder="Enter Password" class="form-control border-0" id="exampleInputPassword1">
+                              <input type="password" placeholder="Enter Password" class="form-control border-0" id="exampleInputPassword1" [class.is-valid]="signUpForm.get('password').errors == null && signUpForm.get('password').touched "
+                              formControlName='password'>
                           </div>
+                          <div class="alert alert-danger" role="alert"
+                          *ngIf="signUpForm.get('password').errors != null && signUpForm.get('password').touched">
+                          Enter Valid Password
+                      </div>
                       </div>
   
                       <div class="form-group">
                           <!-- <label for="exampleInputEmail1">Email address</label> -->
-                          <div class="border-bottom rounded mb-4 d-flex" >
+                          <div class="border-bottom rounded d-flex" >
                                <span> <i class="far fa-eye-slash text-white   mx-5 mt-1 "></i>
                               </span> 
-                              <input type="password" placeholder="confirm Password" class="form-control border-0" id="exampleInputPassword1">
+                              <input type="password" placeholder="confirm Password" class="form-control border-0" id="exampleInputPassword1" [class.is-valid]="signUpForm.get('confirmPassword').errors == null && signUpForm.get('confirmPassword').touched "
+                              formControlName='confirmPassword'>
                           </div>
+                          <div class="alert alert-danger" role="alert"
+                          *ngIf="signUpForm.get('confirmPassword').errors != null && signUpForm.get('confirmPassword').touched">
+                          Enter Valid Password
+                      </div>
                       </div>
                   
   
