--- a/src/app/pages/trackorder/trackorder.component.html
+++ b/src/app/pages/trackorder/trackorder.component.html
@@ -1,4 +1,3 @@
-
 <div class="container login-section my-5 ">
     <div class="row login-layer py-5">
 
@@ -6,48 +5,70 @@
             <img src="../../../assets/images/bglogin.jpg" class="w-100 h-100" alt="">
         </div> -->
 
-        <div class="col-md-7 ml-auto">
+        <div class="col-lg-7 col-md-9 ml-auto">
 
-          <div class="  py-3">
-           <div class=" ">
+            <div class="  py-3">
+                <div class=" ">
 
-            <div class="text-center text-white login ">
-                <h2 class=" text-white ">Log In</h2>
-            </div>
-
-            <div class="px-5 mt-4">
-                <form class="">
-                    
-                    <div class="form-group my-4">
-                        <!-- <label for="exampleInputEmail1">Email address</label> -->
-                        <div class="border-bottom  rounded px-4 py-2 d-flex justify-content-center" >
-                            <span><i class="far fa-envelope text-white   mx-3 mt-1 "></i></span>
-                            <input type="email" placeholder="enter email" class="form-control border-0  bg-transparent" id="exampleInputPassword1">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <!-- <label for="exampleInputEmail1">Email address</label> -->
-                        <div class="border-bottom px-4 py-2 d-flex" >
-                            <span> <i class="far fa-eye-slash text-white   mx-3 mt-1 "></i>
-                            </span>
-                            <input type="password" placeholder="Enter Password" class="form-control border-0 bg-transparent" id="exampleInputPassword1">
-                        </div>
+                    <div class="text-center text-white login ">
+                        <h2 class=" text-white ">Log In</h2>
                     </div>
 
-                 
-                   <div class="text-center ">
-                    <button type="submit" class="btn text-white bg-mainColor my-3">login</button>
-                    <p class="text-black-50">forget password</p>
-                    <p class="text-center ">Don't have an account? <span class="border-bottom font-weight-bold">sign up</span></p>
-                   </div>
-                </form>
-                
-            </div>
+                    <div class="px-5 mt-4">
+                        <form [formGroup]='trackOrderForm' (ngSubmit)=' logInInfo(trackOrderForm)'>
 
-           </div>
-          </div>
+                            <div class="form-group">
+                                <!-- <label for="exampleInputEmail1">Email address</label> -->
+                                <div class="border-bottom rounded px-4 py-2 d-flex justify-content-center">
+                                    <span><i class="far fa-envelope text-white   mx-3 mt-1 "></i></span>
+                                    <input type="email" placeholder="enter email"
+                                        class="form-control border-0  bg-transparent" id="exampleInputPassword1"
+                                        [class.is-valid]="trackOrderForm.get('email').errors == null && trackOrderForm.get('email').touched "
+                                        formControlName='email' type="email">
+
+                                </div>
+                             
+                                <div class="alert alert-danger" role="alert"
+                                *ngIf="trackOrderForm.get('email').errors != null && trackOrderForm.get('email').touched">
+                                enter valid email
+                            </div>
+                            </div>
+                            <!-- alert -->
+                           
+
+
+                            <div class="form-group">
+                                <!-- <label for="exampleInputEmail1">Email address</label> -->
+                                <div class="border-bottom px-4 py-2 d-flex">
+                                    <span> <i class="far fa-eye-slash text-white  mx-3 mt-1 "></i>
+                                    </span>
+                                    <input type="password" placeholder="Enter Password"
+                                        class="form-control border-0 bg-transparent" id="exampleInputPassword1"
+                                        [class.is-valid]="trackOrderForm.get('password').errors == null && trackOrderForm.get('password').touched"
+                                        formControlName='password' type="password">
+                                </div>
+                                <!-- alert -->
+                                <div class="alert alert-danger"
+                                    *ngIf="trackOrderForm.get('password').errors != null && trackOrderForm.get('password').touched "
+                                    role="alert">
+                                    enter valid password
+                                </div>
+                            </div>
+
+
+                            <div class="text-center ">
+                                <button [disabled]='trackOrderForm.invalid' type="submit"
+                                    class="btn text-white bg-mainColor my-3">login</button>
+                                <p class="text-black-50">forget password</p>
+                                <p class="text-center ">Don't have an account? <span
+                                        class="border-bottom font-weight-bold">sign up</span></p>
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
 
         </div>
     </div>
 </div>
-
