--- a/src/app/shell/navbar/navbar.component.html
+++ b/src/app/shell/navbar/navbar.component.html
@@ -1,10 +1,11 @@
 <section>
     <div class="">
         <!-------------------- main navbar ----------------------------->
-<nav class="navbar navbar-expand-lg navbar-dark nav-color fixed-to py-3">
+<nav class="navbar navbar-expand-lg navbar-dark nav-color ">
+  
     <div class="container">
         <a class="navbar-brand">
-
+            <img src="../../../assets/images/logo.png" class="w-25 rounded-circle" alt="">
         </a>
         <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -37,41 +38,6 @@
 </nav>
 <!-------------------- end main navbar ----------------------------->
 
-<!--------------------- logo & search --------------------------->
-<div class="container my-3">
-    <div class="row d-flex align-items-center">
-
-        <!--------------------- logo --------------------------->
-        <div class="col-md-2">
-            <div class="logo text-center">
-                <img src="../../../assets/images/download.png" class="img-fluid rounded" alt="">
-            </div>
-        </div>
-        <!---------------------end logo --------------------------->
-
-
-        <!--------------------- search --------------------------->
-        <div class="col-md-6 offset-1 ">
-            <div class="d-flex search">
-                <input type="text" placeholder="search" class="form-control">
-                <button class="btn ml-1 bg-mainColor text-white">search</button>
-            </div>
-        </div>
-        <!--------------------- end search --------------------------->
-
-
-        <!--------------------- Selected Items --------------------------->
-        <div class="col-md-3 text-center">
-            <div class="selected-items">
-                <i class="fas fa-shopping-basket fa-4x text-mainColor"></i>
-                <span class="ml-1">Selected Items</span>
-
-            </div>
-        </div>
-        <!--------------------- end Selected Items --------------------------->
-    </div>
-</div>
-<!--------------------- end logo & search --------------------------->
 
 
 
